--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>Ringing</title>
+  <link type="text/css" rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <div id="react-root-container"></div>
