--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </head>
 <body>
   <div id="react-root-container"></div>
-  <script src="bundle.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
