--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         crossorigin="anonymous">
   <link type="text/css" rel="stylesheet" href="styles.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-288275-8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-288275-8');
+  </script>
 </head>
 <body>
   <div id="react-root-container"></div>
